added style to game

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+    font-family: 'Retro Gaming';
+}
+
+body {
+    background-color: black;
+    color: white;
+    overflow: hidden;
+}
+
 canvas {
     background-color: #ccc;
 }
@@ -6,12 +16,36 @@ canvas {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    margin: 20px 0
+    margin: 10px 0
 }
 
 .game {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.textes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+.button {
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 7px 16px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 12px;
+    text-transform: uppercase;
+}
+
+.button:hover {
+    cursor: pointer;
 }
